// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Center Component should render with flex direction 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`Center Component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": undefined,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;
